--- a/class_08_netflix_recommender.ipynb
+++ b/class_08_netflix_recommender.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "verified-accommodation",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "prepared-fraction",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>171</td>\n",
+       "      <td>Jeffrey (1995)</td>\n",
+       "      <td>Comedy|Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>228</td>\n",
+       "      <td>Destiny Turns on the Radio (1995)</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>233</td>\n",
+       "      <td>Exotica (1994)</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>267</td>\n",
+       "      <td>Major Payne (1995)</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>277</th>\n",
+       "      <td>318</td>\n",
+       "      <td>Shawshank Redemption, The (1994)</td>\n",
+       "      <td>Crime|Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>355</td>\n",
+       "      <td>Flintstones, The (1994)</td>\n",
+       "      <td>Children|Comedy|Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>435</td>\n",
+       "      <td>Coneheads (1993)</td>\n",
+       "      <td>Comedy|Sci-Fi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419</th>\n",
+       "      <td>481</td>\n",
+       "      <td>Kalifornia (1993)</td>\n",
+       "      <td>Drama|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>615</th>\n",
+       "      <td>780</td>\n",
+       "      <td>Independence Day (a.k.a. ID4) (1996)</td>\n",
+       "      <td>Action|Adventure|Sci-Fi|Thriller</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     item_id                                 title  \\\n",
+       "0          1                      Toy Story (1995)   \n",
+       "143      171                        Jeffrey (1995)   \n",
+       "194      228     Destiny Turns on the Radio (1995)   \n",
+       "199      233                        Exotica (1994)   \n",
+       "230      267                    Major Payne (1995)   \n",
+       "277      318      Shawshank Redemption, The (1994)   \n",
+       "313      355               Flintstones, The (1994)   \n",
+       "379      435                      Coneheads (1993)   \n",
+       "419      481                     Kalifornia (1993)   \n",
+       "615      780  Independence Day (a.k.a. ID4) (1996)   \n",
+       "\n",
+       "                                          genres  \n",
+       "0    Adventure|Animation|Children|Comedy|Fantasy  \n",
+       "143                                 Comedy|Drama  \n",
+       "194                                       Comedy  \n",
+       "199                                        Drama  \n",
+       "230                                       Comedy  \n",
+       "277                                  Crime|Drama  \n",
+       "313                      Children|Comedy|Fantasy  \n",
+       "379                                Comedy|Sci-Fi  \n",
+       "419                               Drama|Thriller  \n",
+       "615             Action|Adventure|Sci-Fi|Thriller  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of interactions left: 2761\n"
+     ]
+    }
+   ],
    "source": [
     "ml_ratings_df = pd.read_csv(os.path.join(\"data\", \"movielens_small\", \"ratings.csv\")).rename(columns={'userId': 'user_id', 'movieId': 'item_id'})\n",
     "ml_movies_df = pd.read_csv(os.path.join(\"data\", \"movielens_small\", \"movies.csv\")).rename(columns={'movieId': 'item_id'})\n",
@@ -75,10 +203,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "valuable-modem",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>964984086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964983250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964981855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964980985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>964983282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964981725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>964980668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1445714835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1445714885</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     user_id  item_id  rating   timestamp\n",
+       "0          0        0     4.0   964982703\n",
+       "42         0        1     3.0   964984086\n",
+       "72         0        2     4.0   964983250\n",
+       "75         0        3     4.0   964981855\n",
+       "97         0        4     4.0   964980985\n",
+       "192        0        5     5.0   964983282\n",
+       "216        0        6     4.0   964981725\n",
+       "219        0        7     5.0   964980668\n",
+       "232        1        8     3.0  1445714835\n",
+       "235        1        7     4.0  1445714885"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "interactions_df = ml_ratings_df.copy()\n",
     "\n",
@@ -105,10 +353,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "close-massachusetts",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_items=100\n",
+      "n_users=555\n"
+     ]
+    }
+   ],
    "source": [
     "n_items = np.max(interactions_df['item_id']) + 1\n",
     "n_users = np.max(interactions_df['user_id']) + 1\n",
@@ -126,10 +383,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "extraordinary-mexico",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [1. 1. 1. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " [1. 1. 1. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# mapping to int is necessary because of how iterrows works\n",
     "r = np.zeros(shape=(n_users, n_items))\n",
@@ -159,11 +430,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "id": "capital-psychiatry",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>interacted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13800</th>\n",
+       "      <td>478</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13801</th>\n",
+       "      <td>33</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13802</th>\n",
+       "      <td>497</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13803</th>\n",
+       "      <td>137</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13804</th>\n",
+       "      <td>4</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16566 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       user_id  item_id  interacted\n",
+       "0            0        0           1\n",
+       "42           0        1           1\n",
+       "72           0        2           1\n",
+       "75           0        3           1\n",
+       "97           0        4           1\n",
+       "...        ...      ...         ...\n",
+       "13800      478       81           0\n",
+       "13801       33       84           0\n",
+       "13802      497       64           0\n",
+       "13803      137       94           0\n",
+       "13804        4       48           0\n",
+       "\n",
+       "[16566 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "import random\n",
     "n_neg_per_pos = 5\n",
     "interactions_pos_neg_df = interactions_df[['user_id', 'item_id']].copy()\n",
     "\n",
@@ -177,7 +568,25 @@
     "\n",
     "########################\n",
     "# Write your code here #\n",
-    "########################"
+    "########################\n",
+    "\n",
+    "seed = 6789\n",
+    "rng = np.random.RandomState(seed=seed)\n",
+    "\n",
+    "interaction_dict = dict.fromkeys(interactions_pos_neg_df.to_records(index=False).tolist(), \"1\")\n",
+    "n2 = 5 * len(interactions_pos_neg_df)\n",
+    "while len(negative_interactions) < n2 :\n",
+    "    t_user = rng.choice(555)\n",
+    "    t_item = rng.choice(100)\n",
+    "    new_interaction = (t_user, t_item, 0)\n",
+    "    if new_interaction not in interaction_dict.keys():\n",
+    "        negative_interactions.append(new_interaction)\n",
+    "\n",
+    "        \n",
+    "negative_interactions = pd.DataFrame(negative_interactions, columns=['user_id', 'item_id','interacted'])\n",
+    "\n",
+    "interactions_pos_neg_df = pd.concat([interactions_pos_neg_df, negative_interactions], axis=0)\n",
+    "display(interactions_pos_neg_df)"
    ]
   },
   {
@@ -190,12 +599,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "amateur-profession",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'item_repr_matrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1140/882219476.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser_repr_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitem_repr_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'item_repr_matrix' is not defined"
+     ]
+    }
+   ],
    "source": [
     "embedding_dim = 2\n",
     "rng = np.random.RandomState(seed=seed)\n",
@@ -203,6 +632,8 @@
     "########################\n",
     "# Write your code here #\n",
     "########################\n",
+    "\n",
+    "user_repr_matrix = []\n",
     "\n",
     "print(user_repr_matrix)\n",
     "print()\n",
@@ -994,7 +1425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1008,7 +1439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
