--- a/class_11_pytorch.ipynb
+++ b/class_11_pytorch.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "spread-happiness",
    "metadata": {},
    "outputs": [],
@@ -58,14 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "agreed-single",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.5744, 0.7685, 0.1978, 0.5498, 0.4750, 0.5250, 0.6900, 0.4378])\n",
+      "tensor([0.5498, 0.4750, 0.5250, 0.6900, 0.4378])\n"
+     ]
+    }
+   ],
    "source": [
     "########################\n",
     "# Write your code here #\n",
-    "########################\n"
+    "########################\n",
+    "x = torch.tensor(\n",
+    "    [0.3, 1.2, -1.4, 0.2, -0.1, 0.1, 0.8, -0.25]\n",
+    ")\n",
+    "x = torch.sigmoid(x)\n",
+    "print(x)\n",
+    "print(x[-5:])\n"
    ]
   },
   {
@@ -83,14 +98,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "forbidden-journalism",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(209)\n",
+      "tensor(209)\n",
+      "tensor(209)\n"
+     ]
+    }
+   ],
    "source": [
     "########################\n",
     "# Write your code here #\n",
-    "########################\n"
+    "########################\n",
+    "x = torch.tensor([3,1,4,2,6,1,4,8])\n",
+    "y = torch.tensor([5,2,3,12,2,4,17,9])\n",
+    "\n",
+    "d1 = torch.sum(x * y)\n",
+    "d2 = torch.dot(x,y)\n",
+    "d3 = torch.matmul(x.T, y)\n",
+    "\n",
+    "print(d1)\n",
+    "print(d2)\n",
+    "print(d3)"
    ]
   },
   {
@@ -108,14 +143,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "falling-holder",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.0876])\n"
+     ]
+    }
+   ],
    "source": [
     "########################\n",
     "# Write your code here #\n",
-    "########################\n"
+    "########################\n",
+    "\n",
+    "x = torch.tensor([1.2, 2.3, 3.4, -0.7, 4.2, 2.7, -0.5, 1.4, -3.3, 0.2])\n",
+    "theta = torch.tensor([1.7, 0.33, -2.12, -1.73, 2.9, -5.8, -0.9, 12.11, 3.43, -0.5, -1.65])\n",
+    "\n",
+    "e = 1 / (1 + torch.exp(torch.dot(-x , theta[:-1]) - theta[-1:]))\n",
+    "print(e)"
    ]
   },
   {
@@ -141,14 +190,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "copyrighted-perry",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([16.])\n",
+      "tensor([-1.])\n",
+      "tensor([4.])\n"
+     ]
+    }
+   ],
    "source": [
     "########################\n",
     "# Write your code here #\n",
-    "########################\n"
+    "########################\n",
+    "\n",
+    "w1 = torch.tensor([2.0], requires_grad=True)\n",
+    "w2 = torch.tensor([np.pi],requires_grad=True)\n",
+    "w3 = torch.tensor([1.0], requires_grad=True)\n",
+    "z1 =  w1.pow(3) + w1.pow(2)\n",
+    "z2 =  torch.sin(w2)\n",
+    "z3 =  torch.log(w3 * torch.exp(3.0 * w3))\n",
+    "\n",
+    "\n",
+    "z1.backward()\n",
+    "print(w1.grad)\n",
+    "z2.backward()\n",
+    "print(w2.grad)\n",
+    "z3.backward()\n",
+    "print(w3.grad)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -166,14 +243,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "dietary-columbia",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([16.,  1.])\n",
+      "tensor([ 2.3133e+01, -8.7423e-08,  9.8696e+00])\n",
+      "tensor([3.7221, 4.9876, 4.0943])\n"
+     ]
+    }
+   ],
    "source": [
     "########################\n",
     "# Write your code here #\n",
-    "########################\n"
+    "########################\n",
+    "\n",
+    "w1 = torch.tensor([2.0, 3.0], requires_grad=True)\n",
+    "w2 = torch.tensor([np.pi, 2.0, 4.0], requires_grad=True)\n",
+    "w3 = torch.tensor([0.5, 0.67, 0.55], requires_grad=True)\n",
+    "\n",
+    "z1 =  w1[0].pow(3) + w1[0].pow(2) + w1[1]\n",
+    "z2 =  torch.sin(w2[0]) * w2[1] + w2[0].pow(2) * w2[2]\n",
+    "z3 =  torch.exp(w3[0].pow(2) + w3[1].pow(2) + w3[2].pow(2)) + w3[0].pow(2) + w3[1].pow(2) + w3[2].pow(2)\n",
+    "\n",
+    "\n",
+    "z1.backward()\n",
+    "print(w1.grad)\n",
+    "z2.backward()\n",
+    "print(w2.grad)\n",
+    "z3.backward()\n",
+    "print(w3.grad)\n"
    ]
   },
   {
@@ -202,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "cloudy-growing",
    "metadata": {},
    "outputs": [],
@@ -210,7 +313,22 @@
     "def calculate_se_array(base_w, x, y_target, weight_idx, weight_start, weight_end):\n",
     "    ########################\n",
     "    # Write your code here #\n",
-    "    ########################\n"
+    "    ########################\n",
+    "    optimizer = optim.SGD([base_w], lr=0.1)\n",
+    "    losses = []\n",
+    "    w = np.array([])\n",
+    "    n_epochs = 100\n",
+    "    for epoch in range(n_epochs):\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        y = torch.sigmoid(torch.sum(x * base_w))\n",
+    "        loss = torch.pow(y - y_target, 2)\n",
+    "        loss.backward()\n",
+    "        losses.append(loss.item())\n",
+    "        optimizer.step()\n",
+    "       \n",
+    "    return loss.cpu().detach().numpy()\n",
+    "    \n"
    ]
   },
   {
@@ -223,10 +341,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "representative-sauce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.425616e-11\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.tensor([2., -1., 3.], requires_grad=False)\n",
     "w = torch.tensor([-0.65, -0.4, -1.], requires_grad=True)\n",
@@ -242,12 +368,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "supposed-sellers",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10\n",
+      "[-0.58531946 -0.43234026 -0.90297925]\n",
+      "0.3851410150527954\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'cpu'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6760/2979385098.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m             \u001b[0mw_range\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m             \u001b[0merrors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_se_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_target\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m             \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlineplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mw_range\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Training loss'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'red'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6760/2958720402.py\u001b[0m in \u001b[0;36mcalculate_se_array\u001b[1;34m(base_w, x, y_target, weight_idx, weight_start, weight_end)\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mlosses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'cpu'"
+     ]
+    }
+   ],
    "source": [
     "x = torch.tensor([2., -1., 3.], requires_grad=False)\n",
     "w = torch.tensor([-0.65, -0.4, -1.], requires_grad=True)\n",
@@ -424,7 +572,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
